--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>hola</title>
-
+    <style type="text/css">
+      body { padding-top: 70px; }
+  </style>
     <!-- Bootstrap -->
     {% block stylesheets %}
       <link href="{{asset('css/bootstrap.min.css')}}" rel="stylesheet">
@@ -17,7 +19,7 @@
     <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -99,6 +101,7 @@
       </div>
       <!-- /.container-fluid -->
     </nav>
+
     {% block body %}{% endblock %}
     {% block javascripts %}
       <script src="{{asset('js/jquery.min.js')}}"></script>
