--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>hola</title>
+    <title>{% block title %}Welcome{% endblock %}</title>
     <style type="text/css">
-      body { padding-top: 70px; }
-  </style>
+      body {
+        padding-top: 70px;
+      }
+    </style>
     <!-- Bootstrap -->
     {% block stylesheets %}
       <link href="{{asset('css/bootstrap.min.css')}}" rel="stylesheet">
