Se corrigio el link hacia la siguiente pagina poniendo un path en vez de la ruta normal. Buena practica

--- a/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
   <div class="col-md-1"></div>
 
   <div class="input-group col-md-10">
-    <form class="form-horizontal" method="post" action="/create">
+    <form class="form-horizontal" method="post" action="{{path('acme_store_create')}}">
       <div class="form-group">
         <label for="exampleInputEmail1">Nombre</label>
         <input type="text" class="form-control" name="nombre" placeholder="nombre" required>
