--- a/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
@@ -1,22 +1,7 @@
-  {% extends '::base.html.twig' %}
+{% extends '::base.html.twig' %}
 {% block body %}
 
-  <div class="col-md-1"></div>
-
-  <div class="input-group col-md-10">
-    <form class="form-horizontal" method="post" action="{{path('acme_store_create')}}">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Nombre</label>
-        <input type="text" class="form-control" name="nombre" placeholder="nombre" required>
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Precio</label>
-        <input type="text" class="form-control" name="precio" placeholder="precio" required>
-      </div>
-      <input type="submit" class="btn btn-default">
-    </form>
-  </div>
-  <div class="col-md-1">
-
-  </div>
+{{ form_start(form) }}
+{{ form_widget(form) }}
+{{ form_end(form) }}  
 {% endblock %}
