--- a/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/StoreBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,30 @@
 {% extends '::base.html.twig' %}
 {% block body %}
 
-{{ form_start(form) }}
-{{ form_widget(form) }}
-{{ form_end(form) }}  
+  <div class="container">
+    <h1 class="md-4">Nuevo Producto</h1>
+    <div class="row">
+      <div class="col-md-8">
+        {{ form_start(form) }}
+        {{ form_errors(form) }}
+
+          <div class="form-group">
+            {{ form_label(form.name) }}
+            {{ form_errors(form.name) }}
+            {{ form_widget(form.name) }}
+          </div>
+
+          <div class="form-group">
+            {{ form_label(form.price) }}
+            {{ form_errors(form.price) }}
+            {{ form_widget(form.price) }}
+          </div>
+
+          <div class="btn btn-default">
+            {{ form_widget(form.guardar) }}
+          </div>
+        {{ form_end(form) }}
+      </div>
+    </div>
+  </div>
 {% endblock %}
